samples/_failures_safe/1761455172_a986ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89c2f22d.c: In function ‘main’:
./samples/SAFE/__tmp_89c2f22d.c:152:9: error: expected identifier or ‘(’ at end of input
  152 |         int
      |         ^~~
./samples/SAFE/__tmp_89c2f22d.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89c2f22d.c:152:9: error: expected declaration or statement at end of input
